<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:tint="@color/bg_darker"
        android:src="@drawable/ic_baseline_location_on_24"/>

    <TextView
        android:id="@+id/logo_title"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/help_me"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


    <TextView
        android:id="@+id/arabic_btn"
        android:layout_above="@id/english_btn"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:text="@string/arabic"
        android:background="@drawable/buttons_bg"
        android:textColor="@color/text_dark"/>

    <TextView
        android:id="@+id/english_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:text="@string/english"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_bg"
        android:textColor="@color/text_dark"/>
</RelativeLayout>