<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Balance">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:background="@color/bg_darker"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/balance"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_back_24"
        android:textSize="22sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/text_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:layout_below="@id/title"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/my_balance"
        android:textSize="22sp"
        android:textColor="@color/text_dark"/>
    <TextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:layout_below="@id/subtitle"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="0.00 SAR"
        android:layout_marginBottom="16dp"
        android:textSize="22sp"
        android:textColor="@color/text_dark"/>

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pay"
        android:background="@drawable/buttons_bg"
        android:textAllCaps="false"
        android:padding="16dp"
        android:textColor="@color/text_dark"
        android:layout_below="@id/balance"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>