<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".VerificationActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:background="@color/bg_darker"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/verification_code"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_back_24"
        android:textSize="22sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/text_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/verification_code"
        android:layout_below="@id/title"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:id="@+id/body"
        android:layout_below="@id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"
        android:textSize="18sp"
        android:layout_alignStart="@id/subtitle"
        android:text="@string/verification_code_msg"
        android:textColor="@color/text_dark" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/code"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="6"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:pinAnimationType="fromBottom"
        app:pinTextBottomPadding="2dp"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="4dp"
        app:pinLineColors="@color/text_dark"
        android:layoutDirection="ltr"
    />

    <TextView
        android:id="@+id/resend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_alignStart="@id/code"
        android:layout_marginTop="8dp"
        android:text="@string/resend_sms"
        android:layout_marginBottom="50dp"
        android:textSize="16sp"
        android:textColor="@color/text_dark"/>

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/check_code"
        android:layout_below="@id/resend_btn"
        android:background="@drawable/buttons_bg"
        android:padding="16dp"
        android:textAllCaps="false"
        android:textColor="@color/text_dark"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>